fixed horizontal overflow in mobile view

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -31,6 +31,13 @@ canvas {
     text-align: center;
     margin: 0;
     user-select: none;
+    max-width: 100vw;
+}
+
+@media(max-width: 540px) {
+    #site-title {
+        font-size: 24pt;
+    }
 }
 
 .header {
@@ -111,19 +118,19 @@ p {
     }
 }
 
+h2 {
+    font-family: "IBM Plex Mono", monospace;
+    font-size: 16pt;
+    user-select: none;
+    margin-bottom: 32px;
+}
+
 #social-media-container {
     z-index: 11;
     position: fixed;
     top: 32px;
     left: 32px;
     width: 96px;
-}
-
-h2 {
-    font-family: "IBM Plex Mono", monospace;
-    font-size: 16pt;
-    user-select: none;
-    margin-bottom: 32px;
 }
 
 #social-media-container div {
@@ -141,6 +148,24 @@ h2 {
     -webkit-box-shadow: 0px 8px 32px 12px rgba(0,0,0,1);
     -moz-box-shadow: 0px 8px 32px 12px rgba(0,0,0,1);
 }
+
+@media(max-width: 540px) {
+    #social-media-container {
+        top: 16px;
+        left: 16px;
+        width: 48px;
+    }
+
+    #social-media-container div {
+        height: 48px;
+        margin-bottom: 8px;
+        background: none;
+        box-shadow: none;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;    
+    }
+}
+
 
 i {
     font-style: normal;   
